[package]
name = "shared"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
url = { workspace = true }
thiserror          = { workspace = true }
alloy = {workspace = true, features = ["rlp"]}
jsonrpsee = {workspace = true, features = ["jsonrpsee-types"]}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter", "json"] }


[lints]
workspace = true
