[package]
name = "shared"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
url = { workspace = true }
thiserror          = { workspace = true }
alloy = {workspace = true, features = ["rlp", "k256"]}
jsonrpsee = {workspace = true, features = ["jsonrpsee-types", "server"]}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter", "json"] }
byte-unit = { workspace = true, features = ["default"] }
derive_more = { workspace = true, features = ["display"] }

[lints]
workspace = true
