[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "shared"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy = { workspace = true, features = [
  "consensus",
  "contract",
  "k256",
  "providers",
  "rlp",
  "rpc-types",
] }
async-trait = { workspace = true }
axum = { workspace = true }
byte-unit = { workspace = true, features = ["default"] }
bytes = { workspace = true }
eyre = { workspace = true }
flate2 = { workspace = true }
jsonrpsee = { workspace = true, features = ["jsonrpsee-types"] }
prometheus-client = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }


[lints]
workspace = true
