[package]
edition.workspace = true
name              = "synd-batch-sequencer"
version.workspace = true

[dependencies]
alloy     = { workspace = true }
batcher   = { workspace = true }
clap      = { workspace = true }
eyre      = { workspace = true }
shared    = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true, features = ["signal"] }
tracing   = { workspace = true }


[dev-dependencies]
mockito = { workspace = true }
url     = { workspace = true }


[lints]
workspace = true
