[package]
edition.workspace = true
name              = "synd-batch-sequencer"
version.workspace = true

[dependencies]
batcher = { workspace = true }
eyre    = { workspace = true }
shared  = { workspace = true }
tokio   = { workspace = true, features = ["signal"] }
tracing = { workspace = true }


[dev-dependencies]
mockito = { workspace = true }
url     = { workspace = true }


[lints]
workspace = true
