[package]
description            = "Syndicate Batch Sequencer"
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "synd-batch-sequencer"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true


[dependencies]
alloy             = { workspace = true }
byte-unit         = { workspace = true }
clap              = { workspace = true, features = ["derive", "env"] }
contract-bindings = { workspace = true }
derivative        = { workspace = true }
eyre              = { workspace = true }
flate2            = { workspace = true }
humantime         = { workspace = true }
prometheus-client = { workspace = true }
redis             = { workspace = true, features = ["streams", "tokio-comp"] }
rlp               = { workspace = true }
shared            = { workspace = true }
synd-maestro      = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }

[dev-dependencies]
reqwest    = { workspace = true }
test-utils = { workspace = true }


[lints]
workspace = true
