[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "synd-verifier"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy              = { workspace = true }
clap               = { workspace = true }
eyre               = { workspace = true }
shared             = { workspace = true }
synd-block-builder = { workspace = true }
synd-mchain        = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }

[lints]
workspace = true
