[package]
edition.workspace = true
name              = "tc-sequencer"
version.workspace = true

[dependencies]
batcher   = { workspace = true }
clap      = { workspace = true }
eyre      = { workspace = true }
shared    = { workspace = true }
tc-client = { workspace = true }
tokio     = { workspace = true, features = ["signal"] }
tracing   = { workspace = true }


[lints]
workspace = true

[dev-dependencies]
mockito = { workspace = true }
