[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "test-framework"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy = { workspace = true, features = [
  "node-bindings",
  "provider-engine-api",
  "provider-ipc",
  "providers",
  "rpc-types-anvil",
  "sol-types",
] }
contract-bindings = { workspace = true }
ctor = { workspace = true }
eyre = { workspace = true }
maestro = { workspace = true }
mchain = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
chain-ingestor = { workspace = true }

[features]
env-tests = []

[lints]
workspace = true
