[package]
name = "interceptor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
alloy = { version = "0.4.2", features = ["full"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["env"] }
jsonrpsee = { version = "0.24.3", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0.128"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing = "0.1.40"
clap = { version = "4.5.17", features = ["derive"] }
hyper = { version = "1.4.1", features = ["full"] }
bytes = "1.7.1"
http-body = "1.0.1"
http-body-util = "0.1"
pin-project-lite = "0.2.14"
http = "1.1.0"
want = { version = "0.3" }
smallvec = { version = "1.12", features = ["const_generics", "const_new"] }
futures-util = { version = "0.3", default-features = false }
futures-channel = { version = "0.3" }
httparse = { version = "1.8" }
itoa = { version = "1" }
h2 = { version = "0.4.2" }
httpdate = { version = "1.0" }
reqwest = "0.12.7"
serde = "1.0.210"
hyper-util = "0.1.8"
alloy-primitives = "0.8.7"
url = { version = "2", features = ["serde"] }
prometheus-client = "0.22"
