[package]
name = "metabased-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
alloy = { workspace = true, features = [
  "rlp",
  "providers",
  "rpc-types",
  "contract",
  "signers",
  "signer-local",
  "k256",
] }
figment = { workspace = true, features = ["env"] }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing = { workspace = true, features = ["attributes"] }
clap = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
url = { workspace = true, features = ["serde"] }
rand = { workspace = true }
flate2 = { workspace = true }
prometheus-client = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
alloy-provider = "0.9.2"

[dev-dependencies]
alloy-rlp = { workspace = true }
test-case = { workspace = true }
const_format = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "zlib_compression"
harness = false
path = "benches/zlib_compression.rs"
