[package]
name = "metabased-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = [
  "rlp",
  "provider-engine-api",
  "providers",
  "rpc-types",
  "contract",
  "signers",
  "signer-local",
  "k256",
] }
reqwest = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
hex = "0.4"
jsonrpsee = { version = "0.20", features = ["server"] }
prometheus = "0.13"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.4" 