[package]
description            = "e2e tests for metabased-translator."
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "e2e-tests"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[package.metadata.cargo-machete]
# strum is used via a macro from strum_macros - machete does not detect it
ignored = ["strum"]


[dependencies]
alloy = { workspace = true, features = [
  "node-bindings",
  "rpc-types-anvil",
  "sol-types",
] }
block-builder = { workspace = true }
contract-bindings = { workspace = true }
eyre = { workspace = true }
mchain = { workspace = true }
reqwest = { workspace = true }
shared = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
test-utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
ctor = { workspace = true }

[features]
env-tests = []

[lints]
workspace = true
