[package]
description            = "Common test utilities"
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "test-utils"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy = { workspace = true, features = [
  "node-bindings",
  "provider-engine-api",
  "providers",
  "rpc-types-anvil",
  "sol-types",
] }
eyre = { workspace = true }
mchain = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
shared = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt-multi-thread"] }
tracing = { workspace = true }
