[package]
description            = "Common test utilities"
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "test-utils"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy                                    = { workspace = true, features = ["node-bindings", "providers", "rpc-types-anvil"] }
contract-bindings                        = { workspace = true }
eyre                                     = { workspace = true }
redis                                    = { workspace = true, features = ["tokio-comp"] }
serde                                    = { workspace = true }
serde_json                               = { workspace = true }
shared                                   = { workspace = true }
synd-mchain                              = { workspace = true }
synd-tee-attestation-zk-proofs-submitter = { workspace = true }
tokio                                    = { workspace = true, features = ["fs", "process", "rt-multi-thread"] }
tracing                                  = { workspace = true }
