[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "synd-appchain-verifier"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy              = { workspace = true }
clap               = { workspace = true }
eyre               = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
shared             = { workspace = true }
synd-block-builder = { workspace = true }
synd-mchain        = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
[lints]
workspace = true
