[package]
edition.workspace = true
name              = "synd-proposer"
version.workspace = true

[dependencies]
alloy             = { workspace = true, features = ["provider-engine-api", "providers", "signer-local"] }
axum              = { workspace = true }
clap              = { workspace = true, features = ["derive", "env"] }
contract-bindings = { workspace = true }
eyre              = { workspace = true }
humantime         = { workspace = true }
prometheus-client = { workspace = true }
serde             = { workspace = true }
shared            = { workspace = true }
tokio             = { workspace = true, features = ["full", "sync"] }
tracing           = { workspace = true }
url               = { workspace = true }
synd-seqchain-verifier = {path = "../synd-seqchain-verifier"}
log = "0.4.27"
serde_json = "1.0.140"

[lints]
workspace = true

[features]
env-tests = []

[dev-dependencies]
alloy      = { workspace = true, features = ["node-bindings", "rpc-types-anvil", "sol-types"] }
ctor       = { workspace = true }
jsonrpsee  = { workspace = true, features = ["server"] }
reqwest    = { workspace = true }
test-utils = { workspace = true }
